# 2-kyjness-community-be

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Dockerfile.lambda  Jenkinsfile  README.md  alembic.ini  appspec.yml  config.py  dev.sh  docker-compose.ec2.yml  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml  task-definition.json
.claude/commands/: adr.md
.github/workflows/: cd.yml  ci.yml  deploy.yml
alembic/: README  env.py
alembic/versions/: 20250228_users_profile_image_id.py
app/: __init__.py  main.py
app/api/: v1.py
app/api/dependencies/: __init__.py  auth.py  client.py  db.py  permissions.py  query.py  redis_client.py  upload.py
app/api/v1/: __init__.py
app/auth/: auth_controller.py  auth_model.py  auth_route.py  auth_schema.py  auth_scheme.py  controller.py  dependencies.py  model.py  router.py  schema.py  util.py
app/comments/: comments_controller.py  comments_model.py  comments_route.py  comments_schema.py  controller.py  model.py  router.py  schema.py
app/common/: __init__.py  codes.py  enums.py  exceptions.py  logging_config.py  paths.py  response.py  responses.py  schema.py  schemas.py  validators.py
app/controllers/: posts_controller.py
app/core/: celery.py  cleanup.py  codes.py  config.py  database.py  dependencies.py  exception_handlers.py  file_upload.py  ids.py  logging_config.py  metrics.py  middleware.py  openapi_camel.py  response.py  security.py  storage.py  validators.py
app/core/dependencies/: __init__.py  availability.py  comment_author.py  current_user.py  post_author.py
app/core/middleware/: __init__.py  access_log.py  metrics.py  proxy_headers.py  rate_limit.py  request_id.py  security_headers.py
app/db/: __init__.py  base.py  base_class.py  connection.py  engine.py  model_registry.py  session.py
app/db/alembic/: env.py
app/domain/: __init__.py
app/domain/admin/: __init__.py  model.py  router.py  schema.py  service.py
app/domain/auth/: __init__.py  controller.py  model.py  router.py  schema.py  service.py  user_status_cache.py
app/domain/chat/: __init__.py  manager.py  model.py  payload.py  pubsub.py  schema.py  service.py  ws_auth.py
app/domain/comments/: __init__.py  controller.py  model.py  router.py  schema.py  service.py
app/domain/dogs/: __init__.py  model.py  router.py  schema.py  service.py
app/domain/likes/: __init__.py  model.py  router.py  schema.py  service.py
app/domain/media/: __init__.py  controller.py  image_policy.py  model.py  router.py  schema.py  service.py
app/domain/notifications/: __init__.py  model.py  router.py  schema.py  service.py  stream.py
app/infra/: __init__.py  cache.py  pubsub.py  redis.py  sns.py  storage.py
app/likes/: likes_controller.py  likes_model.py  likes_route.py  likes_schema.py
app/media/: controller.py  image_policy.py  media_controller.py  media_model.py  media_route.py  model.py  router.py
app/models/: auth_model.py  posts_model.py
app/posts/: controller.py  mapper.py  model.py  posts_controller.py  posts_model.py  posts_route.py  posts_schema.py  posts_scheme.py  router.py  schema.py
app/schemas/: posts.py
app/users/: controller.py  model.py  router.py  schema.py  users_controller.py  users_model.py  users_route.py  users_schema.py  users_scheme.py
app/worker/: __init__.py  async_bridge.py
docs/: 00-operating-envelope-and-scope.md  01-architecture.md  ARCHITECTURE.md  DEPLOYMENT.md  ROADMAP.md  api-codes.md  architecture.md  backlog.md  clear_db.sql  deploy.md  domain-flows.md  infrastructure-reliability-design.md  jwt-auth-frontend.md  kubernetes-cicd-pipeline-report.md  puppytalkdb.sql  puppyytalkdb.sql  realtime-notifications.md  request-and-api-contract.md  security.md
docs/adr/: 0001-identifier-strategy.md  0001-view-count-aggregation.md  0002-cursor-pagination.md  0002-distributed-rate-limit.md  0003-distributed-rate-limit.md  0003-idempotency-keys.md  0004-cache-strategy.md  0004-realtime-fanout-pubsub.md  0005-identifier-strategy.md  0005-resilience-no-circuit-breaker.md  0006-observability.md  0007-view-count-buffering.md  0008-idempotency-keys.md  0009-realtime-delivery.md  0010-storage-backend-strategy.md  0011-representative-dog-view-relationship.md  0012-admin-report-feed-pagination.md  0013-product-behavior-decisions.md  0014-redis-protocol-boundary.md  README.md
docs/design/: 00-operating-envelope-and-scope.md
migrations/: env.py
migrations/versions/: 001_initial_baseline.py  002_seed_categories.py  003_fix_alembic_version_len.py  003_set_null_posts_comments_user_fk.py  004_notifications_table.py  005_entity_ids_ulid_to_uuid_v7.py  006_chat_dm_tables.py  007_pg_trgm_hashtag_gin_search.py  008_dog_representative_unique.py  009_chat_unread_partial_index.py  010_notification_unread_index.py  011_reports_target_index.py  012_drop_redundant_user_block_unique.py  caabca5fb0ad_add_idx_posts_feed_latest.py
scripts/: dev.sh  entrypoint.sh  export_requirements_for_audit.py
test/: auth.py  comments.py  conftest.py  health.py  media.py  posts.py  users.py
tests/: conftest.py
tests/integration/: conftest.py  test_admin.py  test_auth.py  test_chat.py  test_comments.py  test_dogs.py  test_likes.py  test_media.py  test_notifications.py  test_posts.py  test_storage_minio.py
tests/unit/: fakes.py  test_admin_reports.py  test_chat_notifications.py  test_chat_ws_guards.py  test_client_identifier.py  test_comment_tree.py  test_core_security.py  test_dog_representative.py  test_domain_metrics.py  test_integrity_error_mapping.py  test_media_confirm_guards.py  test_notification_sns_dispatch.py  test_observability.py  test_path_constants.py  test_post_search.py  test_pubsub_reconnect.py  test_rate_limit_middleware.py  test_settings_prod_guard.py  test_sse_fanout.py  test_trending_post_cache.py  test_trending_posts_query.py  test_view_counter.py
(+61 files in other folders)
